--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <button type="submit">Search</button>
         </form>
         <div class="bar">
-          Copyright © 2024 Web Design Mastery. All rights reserved.
+          Copyright © 2024 Sagar Malasi. All rights reserved.
         </div>
       </div>
     </header>
